# drf-ai-ms

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  urls.py
.github/workflows/: django.yml
drf_ai_ms/: __init__.py  apps.py  views.py
drf_hf_hub/: serializers.py  urls.py  views.py
